--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "5.0.1",
     "three": "^0.158.0"
   },
   "scripts": {
