--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: student-file-sharing-backend
     runtime: node
+    rootDir: backend
     buildCommand: npm install
     startCommand: npm start
     envVars:
